--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
   <div class="inputoutput">
     <app-model3d 
     [base64Img]="base64Img"
-    [label]="labels[terms[0]]">
+    [label]="labels[terms[0]]"
+    [command]="command">
   </app-model3d>
   </div>
   <app-action-bar
